--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -140,7 +140,6 @@ mode "builtin" {
 bindsym $mod+r mode "resize"
 bindsym $mod+c mode "builtin"
 
-
 #  ____             
 # | __ )  __ _ _ __ 
 # |  _ \ / _` | '__|
@@ -154,7 +153,7 @@ bindsym $mod+c mode "builtin"
 set $trans_bg #000000B0
 
 bar {
-    font pango:Misc Tamsyn 12
+    font xft:Misc Tamsyn 12
 
     status_command i3blocks
     Modifier Mod4
