--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "zsh/.config/zsh/plugins/zsh-autosuggestions"]
 	path = zsh/.config/zsh/plugins/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions.git
+[submodule "zsh/.config/zsh/plugins/git-prompt.zsh"]
+	path = zsh/.config/zsh/plugins/git-prompt.zsh
+	url = https://github.com/woefe/git-prompt.zsh.git
