--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "nvim/.config/nvim/pack/packages/start/coc.nvim"]
 	path = nvim/.config/nvim/pack/packages/start/coc.nvim
 	url = https://github.com/neoclide/coc.nvim.git
+[submodule "nvim/.config/nvim/pack/packages/start/vimwiki"]
+	path = nvim/.config/nvim/pack/packages/start/vimwiki
+	url = https://github.com/vimwiki/vimwiki.git
