--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,8 +1,8 @@
-cache-default=50000
-cache-secs=1000
-cache-file=TMP
+cache=auto
+demuxer-max-bytes=512MiB
+demuxer-readahead-secs=1200
 sub-auto=fuzzy
-ytdl-format=bestvideo[height<=?1080][protocol!=http_dash_segments]+bestaudio/best
+ytdl-format=bestvideo[height<=1080]+bestaudio/best[height<=1080]/best
 volume=30
 profile=opengl-hq
 scale=ewa_lanczossharp
@@ -10,5 +10,4 @@ cscale=ewa_lanczossharp
 
 screenshot-png-compression=3
 screenshot-template="%F %P"
-save-position-on-quit
 write-filename-in-watch-later-config
