--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,12 @@
 [submodule "nvim/.config/nvim/pack/packages/start/--force"]
 	path = nvim/.config/nvim/pack/packages/start/--force
 	url = https://github.com/vim-pandoc/vim-pandoc
+[submodule "mpv/.config/mpv/scripts/repos/mpv-youtube-quality"]
+	path = mpv/.config/mpv/scripts/repos/mpv-youtube-quality
+	url = https://github.com/jgreco/mpv-youtube-quality
+[submodule "mpv/.config/mpv/scripts/repos/mpv_thumbnail_script"]
+	path = mpv/.config/mpv/scripts/repos/mpv_thumbnail_script
+	url = https://github.com/TheAMM/mpv_thumbnail_script
+[submodule "vim/.config/vim/bundle/kotlin-vim"]
+	path = vim/.config/vim/bundle/kotlin-vim
+	url = https://github.com/udalov/kotlin-vim.git
