--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -11,3 +11,5 @@ cscale=ewa_lanczossharp
 screenshot-png-compression=3
 screenshot-template="%F %P"
 write-filename-in-watch-later-config
+osd-font-size=30
+osc=no
