--- a/.gitmodules
+++ b/.gitmodules
@@ -84,7 +84,10 @@
 	url = https://github.com/TheAMM/mpv_thumbnail_script
 [submodule "vim/.config/vim/bundle/kotlin-vim"]
 	path = vim/.config/vim/bundle/kotlin-vim
-	url = https://github.com/udalov/kotlin-vim.git
+	url = https://github.com/udalov/kotlin-vim
 [submodule "vim/.config/vim/bundle/vim-toml"]
 	path = vim/.config/vim/bundle/vim-toml
 	url = https://github.com/cespare/vim-toml
+[submodule "vim/.config/vim/bundle/--force"]
+	path = vim/.config/vim/bundle/--force
+	url = https://github.com/udalov/kotlin-vim
