--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -24,6 +24,7 @@ bindsym $mod+Shift+q kill
 bindsym $mod+Shift+n exec ~/scripts/qn
 bindsym $mod+Shift+m exec ~/scripts/mpvclipboard
 bindsym $mod+Shift+s exec ~/scripts/screenshot-edit
+bindsym $mod+Shift+e exec ~/scripts/clipboard-edit
 
 for_window [title="quicknote-editor-floating"] floating enable
 
@@ -106,7 +107,6 @@ bindsym $mod+Shift+F12 move container to workspace number 22
 workspace_auto_back_and_forth yes
 
 bindsym $mod+Shift+r restart
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 bindsym $mod+Shift+p exec --no-startup-id mpc toggle
 bindsym $mod+Shift+bracketleft exec --no-startup-id mpc prev
