--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,7 +1,6 @@
 cache=auto
 demuxer-max-bytes=512MiB
 demuxer-readahead-secs=1200
-sub-auto=fuzzy
 ytdl-format=bestvideo[height<=1080]+bestaudio/best[height<=1080]/best
 volume=30
 profile=opengl-hq
@@ -13,3 +12,16 @@ screenshot-template="%F %P"
 write-filename-in-watch-later-config
 osd-font-size=30
 osc=no
+
+# Subtitles
+sub-ass-override=no
+sub-blur=0.3
+sub-color=0.95
+sub-border-color=0.05/0.05/0.03
+sub-border-size=2.2
+sub-bold
+sub-spacing=0.6
+sub-margin-x=30
+sub-margin-y=36
+sub-font-size=43
+sub-auto=fuzzy
