--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -30,7 +30,7 @@ lyrics_directory = ~/.config/ncmpcpp/lyrics
 #
 ## Needed for tag editor and file operations to work.
 ##
-#mpd_music_dir = ~/music
+mpd_music_dir = ~/media/music
 #
 #mpd_crossfade_time = 5
 #
