--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,3 +14,8 @@
 	defaultBranch = main
 [merge]
 	conflictstyle = diff3
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
