ssh sign commits by default

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -19,3 +19,11 @@
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
+[gpg]
+	format = ssh
+[user]
+	signingkey = /home/jess/.ssh/id_ed25519.pub
+[commit]
+	gpgsign = true
+[tag]
+	gpgsign = true
