--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,9 @@
 [submodule "mpv/.config/mpv/scripts/mpv_slicing"]
 	path = mpv/.config/mpv/scripts/mpv_slicing
 	url = https://github.com/Kagami/mpv_slicing
+[submodule "zsh/.config/zsh/plugins/git-prompt.zsh"]
+	path = zsh/.config/zsh/plugins/git-prompt.zsh
+	url = https://github.com/woefe/git-prompt.zsh
+[submodule "zsh/.config/zsh/plugins/zsh-syntax-highlighting"]
+	path = zsh/.config/zsh/plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting
